--- a/Weather/Base.lproj/Main.storyboard
+++ b/Weather/Base.lproj/Main.storyboard
@@ -28,6 +28,7 @@
                                     </imageView>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hgm-ut-MlR">
                                         <rect key="frame" x="158.5" y="254" width="97" height="34"/>
+                                        <color key="backgroundColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="97" id="CZJ-7L-IlB"/>
                                             <constraint firstAttribute="height" constant="34" id="iR0-k1-4fI"/>
@@ -37,6 +38,7 @@
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KBb-kT-Yhq">
                                         <rect key="frame" x="158.5" y="359" width="97" height="34"/>
+                                        <color key="backgroundColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="34" id="IHi-58-66N"/>
                                             <constraint firstAttribute="width" constant="97" id="ekB-9M-M8A"/>
@@ -63,9 +65,12 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UMS-HN-A2C">
-                                        <rect key="frame" x="184" y="423" width="46" height="48"/>
+                                        <rect key="frame" x="157" y="423" width="100" height="48"/>
+                                        <color key="backgroundColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="48" id="Im6-KN-vNb"/>
+                                            <constraint firstAttribute="width" constant="100" id="Ksd-Rv-GkW"/>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="48" id="ZUU-cd-QO6"/>
                                         </constraints>
                                         <state key="normal" title="Button"/>
                                         <connections>
